--- a/EUILayoutDemo/Podfile
+++ b/EUILayoutDemo/Podfile
@@ -1,17 +1,17 @@
 # Uncomment the next line to define a global platform for your project
-target 'DCContainerLayouter' do
+target 'EUILayoutDemo' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   use_frameworks!
 
   # Pods for DCContainerLayouter
   pod 'YogaKit', '~> 1.7'
 
-  target 'DCContainerLayouterTests' do
+  target 'EUILayoutDemoTests' do
     inherit! :search_paths
     # Pods for testing
   end
 
-  target 'DCContainerLayouterUITests' do
+  target 'EUILayoutDemoUITests' do
     inherit! :search_paths
     # Pods for testing
   end
