--- a/EUILayoutDemo/Podfile
+++ b/EUILayoutDemo/Podfile
@@ -2,6 +2,7 @@
 target 'EUILayoutDemo' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   use_frameworks!
+  pod 'JPFPSStatus', '~> 0.1.1'
 
   target 'EUILayoutDemoTests' do
     inherit! :search_paths
