--- a/EUILayoutDemo/Podfile
+++ b/EUILayoutDemo/Podfile
@@ -3,6 +3,7 @@ target 'EUILayoutDemo' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   use_frameworks!
   pod 'JPFPSStatus', '~> 0.1.1'
+  pod 'Masonry'
 
   target 'EUILayoutDemoTests' do
     inherit! :search_paths
